fix .table-view overflow style

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,6 +5,9 @@
     white-space: nowrap;
     width: 320px;
   }
+  .popover .table-view {
+    overflow: hidden;
+  }
 }
 
 .content p {
